# oceanbreeze

./: .gitignore  README.md  main.py  pyproject.toml
ansible/: install_caddy.yml  install_prerequisites.yml  main.yml  setup_webserver.yml  update_instance.yml
oceanbreeze/: config.py  oceanbreeze.py
oceanbreeze/lib/: custom_print.py  digitalocean.py  helpers.py
oceanbreeze/modules/: deploy.py  destroy.py  list.py  update.py
terraform/: .terraform.lock.hcl  domain.tf  droplet.tf  project.tf  provider.tf  variables.template  variables.tf
webserver/caddy/: Caddyfile.template  caddy.service
webserver/caddy/filters/: headers_standard.caddy
webserver/template_website/digitalagency/: blocks.css  css.css  css2.css  elementor-icons.min.css  frontend.min.css  index.html  index_1.html  post-6.css  post-7.css  solid.min.css  style-main.css  swiper.min.css  wpforms-base.min.css
webserver/template_website/socialmedia/: bootstrap.min.css  css.css  index.html  mbr-additional.css  mobirise2.css  style-1.css  style.css  styles.css
